--- a/Retro/nav_meny.html
+++ b/Retro/nav_meny.html
@@ -12,7 +12,7 @@
 
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-button-container">
-            <div class="menu-button"></div>
+            <span class="menu-button"></span> <!--inline-->
         </label>
 
         <ul class="menu">
