skuggning av top och bottom

--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -13,5 +13,19 @@
             <a href="#">Sign up</a>
         </div>
     </section>
+    <section class="banner">
+        <img src="img/back.jpg" alt="background image">
+        <div class="box">
+            <div class="heading">
+                <h2>Obegränsat med filmer, serier och annat</h2>
+                <h5>Från 109 kr. Avsluta när du vill.</h5>
+                <p>Redo att börja titta? Ange din e-postadress för att skapa eller återaktivera ett konto.</p>
+            </div>
+            <div class="search">
+                <input type="text" name="subscribe" placeholder="E-postadress">
+                <a href="#">Kom igång</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
