Banner med text och search fält

--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -14,7 +14,7 @@
         </div>
     </section>
     <section class="banner">
-        <img src="img/back.jpg" alt="background image">
+        <img src="img/back.jpg" alt="background image" class="fit">
         <div class="box">
             <div class="heading">
                 <h2>Obegränsat med filmer, serier och annat</h2>
