Sectioner med bilder 16:00

--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -27,5 +27,32 @@
             </div>
         </div>
     </section>
+    <section class="part1">
+        <div class="talk">
+            <h1>Titta på din tv</h1>
+            <p>Tita på smart-tv-apparater, Playstation, Xbox, Chromecast, Apple TV, Blu-ray-spelare och många fler</p>
+        </div>
+        <div class="img">
+            <img src="img/part1.png" alt="part1 picture">
+        </div>
+    </section>
+    <section class="part2">
+        <div class="img">
+            <img src="img/part2.jpg" alt="part2 picture">
+        </div>
+        <div class="talk">
+            <h1>Ladda ner dina serier och titta offline</h1>
+            <p>Spara dina favoriter så har du alltid något att titta på.</p>
+        </div>
+    </section>
+    <section class="part3">
+        <div class="talk">
+            <h1>Titta var som helst.</h1>
+            <p>Streama obegränsat med filmer och serier på mobil, surfplatta, dator och tv.</p>
+        </div>
+        <div class="img">
+            <img src="img/part3.png" alt="part3 picture">
+        </div>
+    </section>
 </body>
 </html>
