Uppdaterad med kommentar

--- a/Flex/flexExempel.html
+++ b/Flex/flexExempel.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+    <!-- Detta är kommentar -->
     <div class="container">
         <div>Item 1</div>
         <div>Item 2</div>
