HTML accordion -  la till item1

--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -54,5 +54,25 @@
             <img src="img/part3.png" alt="part3 picture">
         </div>
     </section>
+    <section class="list">
+        <h1>Vanliga frågor och svar</h1>
+        <div class="accordion-menu">
+            <div class="item" id="item1">
+                <a href="#item1" class="title">
+                    <span>Vad är Netflix?</span>
+                    <i class="icon"></i>
+                </a>
+                <p class="text">
+                    Netflix är en streamingtjänst som erbjuder ett stort utbud av prisbelänta serier,
+                    filmer, anime, dokumentärer och mycket mer på tusentals internetanslutna enheter.
+                    <br>
+                    <br>
+                    Du kan titta så mycket du vill, när du vill och utan ett enda reklamavbrott - allt för en 
+                    låg marknadskostnad. Det finns alltid något nytt att upptäcka, och nya serier och filmer 
+                    läggs till varje vecka!
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
