HTML accordion - andra items

--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -72,6 +72,48 @@
                     läggs till varje vecka!
                 </p>
             </div>
+            <div class="item" id="item2">
+                <a href="#item2" class="title">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+                    <i class="icon"></i>
+                </a>
+                <p class="text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Aperiam velit ipsa, culpa eius necessitatibus commodi eveniet earum, quasi rem debitis quam soluta omnis accusantium.
+                    <br>
+                    <br>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Aperiam velit ipsa, culpa eius necessitatibus commodi eveniet earum, quasi rem debitis quam soluta omnis accusantium.
+                </p>
+            </div>
+            <div class="item" id="item3">
+                <a href="#item3" class="title">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+                    <i class="icon"></i>
+                </a>
+                <p class="text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Aperiam velit ipsa, culpa eius necessitatibus commodi eveniet earum, quasi rem debitis quam soluta omnis accusantium.
+                    <br>
+                    <br>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Aperiam velit ipsa, culpa eius necessitatibus commodi eveniet earum, quasi rem debitis quam soluta omnis accusantium.
+                </p>
+            </div>
+            <div class="item" id="item4">
+                <a href="#item4" class="title">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+                    <i class="icon"></i>
+                </a>
+                <p class="text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Aperiam velit ipsa, culpa eius necessitatibus commodi eveniet earum, quasi rem debitis quam soluta omnis accusantium.
+                    <br>
+                    <br>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Aperiam velit ipsa, culpa eius necessitatibus commodi eveniet earum, quasi rem debitis quam soluta omnis accusantium.
+                </p>
+            </div>
         </div>
     </section>
 </body>
