--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -116,5 +116,18 @@
             </div>
         </div>
     </section>
+    <section class="banner2">
+        <div class="box">
+            <div class="heading">
+                <p>Redo att börja titta? Ange din e-postadress för att skapa
+                    eller återaktivera ett konto.
+                </p>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="Enter Email">
+                <a href="#">Kom igång</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
