HTML footer section

--- a/netflix_clone/index.html
+++ b/netflix_clone/index.html
@@ -129,5 +129,41 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div class="one">
+            <ul class="items">
+                <li><a href="#">Vanliga frågor</a></li>
+                <li><a href="#">Investerrelationer</a></li>
+                <li><a href="#">Sätt att titta</a></li>
+                <li><a href="#">Företagsinformation</a></li>
+                <li><a href="#">Juridisk information</a></li>
+            </ul>
+        </div>
+        <div class="two">
+            <ul class="items">
+                <li><a href="#">Hjälpcenter</a></li>
+                <li><a href="#">Jobba hos oss</a></li>
+                <li><a href="#">Användarvillkor</a></li>
+                <li><a href="#">Kontakta oss</a></li>
+                <li><a href="#">Bara på Netflix</a></li>
+            </ul>
+        </div>
+        <div class="three">
+            <ul class="items">
+                <li><a href="#">Ditt konto</a></li>
+                <li><a href="#">Lös in presentkort</a></li>
+                <li><a href="#">Sekretess</a></li>
+                <li><a href="#">Hastighetstest</a></li>
+            </ul>
+        </div>
+        <div class="four">
+            <ul class="items">
+                <li><a href="#">Mediacenter</a></li>
+                <li><a href="#">Köp presentkort</a></li>
+                <li><a href="#">Cookie-inställningar</a></li>
+                <li><a href="#">Juridisk garanti</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
