YTClone - added iconer och left-section

--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -11,6 +11,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="header">
+        <div class="left-section">
+            <img src="img/9104209_hamburger_menu_navigation_navbar_icon.png" 
+            alt="Hamburger Menu" class="hamburger-menu">
+            <img src="img/5296522_youtube_youtube logo_icon.png" alt="Youtube logo" class="youtube-logo">
+        </div>
+        <div class="middle-section">
+
+        </div>
+        <div class="right-section">
+
+        </div>
+    </section>
+
+    <section class="sidebar">
+
+    </section>
+
+    <section class="video-previews">
+
+    </section>
 </body>
 </html>
