--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/headerStyle.css">
     <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/94c5dd11/img/favicon_144x144.png" type="image/png" sizes="144x144">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -15,10 +16,16 @@
         <div class="left-section">
             <img src="img/9104209_hamburger_menu_navigation_navbar_icon.png" 
             alt="Hamburger Menu" class="hamburger-menu">
-            <img src="img/5296522_youtube_youtube logo_icon.png" alt="Youtube logo" class="youtube-logo">
+            <img src="img/5296522_youtube_youtube logo_icon.png" 
+            alt="Youtube logo" class="youtube-logo">
         </div>
         <div class="middle-section">
-
+            <input type="search" placeholder="Search" class="search-box">
+            <button class="search-icon-container">
+                <img src="img/magnifying-glass-1294834_1280.png" 
+                alt="Search icon" class="search-icon">
+                <div class="tooltip">Search</div>
+            </button>
         </div>
         <div class="right-section">
 
