YTClone - right section + css

--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -28,7 +28,25 @@
             </button>
         </div>
         <div class="right-section">
+            <div class="upload-icon">
+                <img src="img/7148752_add_plus_new_create_icon.png" 
+                alt="Create video icon" class="create-video-icon">
+                <div class="tooltip">Create</div>
+            </div>
+            <div class="youtube-apps">
+                <img src="img/2083160_media_movie_share_social_video_icon.png" 
+                alt="Youtube Apps Icon" class="youtube-apps-icon">
+                <div class="tooltip">Youtube Apps</div>
 
+            </div>
+            <div class="notifications-icon-container">
+                <img src="img/9035522_notifications_outline_icon.png" 
+                alt="Notification Icon" class="notifications-icon">
+                <div class="notifications-count">3</div>
+                <div class="tooltip">Notifications</div>
+            </div>
+            <img src="img/avatar-1299805_1280.png" 
+            alt="Profile Icon" class="profile-icon">
         </div>
     </section>
 
