--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/headerStyle.css">
+    <link rel="stylesheet" href="css/sidebarStyle.css">
     <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/94c5dd11/img/favicon_144x144.png" type="image/png" sizes="144x144">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -51,7 +52,31 @@
     </section>
 
     <section class="sidebar">
-
+        <div class="sidebar-link">
+            <img src="img/326656_home_icon.png" 
+            alt="Home icon">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="img/4213417_explore_find_glass_magnifier_search_icon.png" 
+            alt="Explore icon">
+            <div>Explore</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="img/8656173_subscription_youtube_menu_subs_social media_icon.png" 
+            alt="Subscription icon">
+            <div>Subscription</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="img/3204079_youtube_cinema_movie_music_play_icon.png" 
+            alt="YouTube Music icon">
+            <div>YouTube Music</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="img/9042847_playlist_play_icon.png" 
+            alt="Playlist icon">
+            <div>Playlist</div>
+        </div>
     </section>
 
     <section class="video-previews">
