YTClone - HTML - video-grid - video 1

--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -79,8 +79,42 @@
         </div>
     </section>
 
-    <section class="video-previews">
-
+    <section class="video-grid">
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
