YTClone - videoGridStyle fil med grundläggande grid

--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/headerStyle.css">
     <link rel="stylesheet" href="css/sidebarStyle.css">
+    <link rel="stylesheet" href="css/videoGridStyle.css">
     <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/94c5dd11/img/favicon_144x144.png" type="image/png" sizes="144x144">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -115,6 +116,322 @@
                 </div>
             </div>
         </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumnail-row">
+                <a href="http://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                            <img src="channel-pictures/channel-1.jpeg" class="profile-picture">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" class="channel-tooltip-picture">
+                            <div class="channel-info-tooltip">
+                                <p class="channel-tooltip-name">Marques Brownlee</p>
+                                <p class="channel-tooltip-stats">16.6M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-info">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <p class="video-title">Talking Tech and AI with Google CEO Sunder Pichai!</p>
+                </a>
+                <div class="tooltip-hover">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="channel-link">
+                        <p class="video-author">Marques Brownlee</p>
+                    </a>
+                    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+
     </section>
 </body>
 </html>
