YTClone - lite extra efter lektion -  hamburger menu med HTML och CSS med komentarer

--- a/YTClone/index.html
+++ b/YTClone/index.html
@@ -14,10 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <input type="checkbox" id="sidebar-toggle" class="sidebar-toggle" checked>
     <section class="header">
         <div class="left-section">
-            <img src="img/9104209_hamburger_menu_navigation_navbar_icon.png" 
-            alt="Hamburger Menu" class="hamburger-menu">
+            <label for="sidebar-toggle" class="hamburger-menu-label">
+                <img src="img/9104209_hamburger_menu_navigation_navbar_icon.png" 
+                alt="Hamburger Menu" class="hamburger-menu">
+            </label>
             <img src="img/5296522_youtube_youtube logo_icon.png" 
             alt="Youtube logo" class="youtube-logo">
         </div>
