--- a/Lektion12/exempel7.html
+++ b/Lektion12/exempel7.html
@@ -9,12 +9,16 @@
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 100px 100px;
-            gap:10px
+            gap:10px; 
+            /* kan styras separat med 
+            row-gap: 5px;
+            column-gap: 10px; */
         }
         .box1, .box2, .box3 {
             background-color: rgb(228, 182, 255);
         }
         .box1 {
+            /* Från column 2 till och med column 3 */
             grid-column: 2 / 4;
         }
         .box2 {
