Lektion 12 - GameBoardXO - HTML klart

--- a/Lektion12/GameBoardXO.html
+++ b/Lektion12/GameBoardXO.html
@@ -14,12 +14,43 @@
             </header>
             <section class="game-board">
                 <h2>Game Board</h2>
+                <div class="board">
+                    <div class="cell">X</div>
+                    <div class="cell">O</div>
+                    <div class="cell">X</div>
+                    <div class="cell">O</div>
+                    <div class="cell">X</div>
+                    <div class="cell">O</div>
+                    <div class="cell">X</div>
+                    <div class="cell">O</div>
+                    <div class="cell">X</div>
+                </div>
             </section>
             <section class="stats">
                 <h2>Stats</h2>
+                <div class="stat-item">
+                    <span class="stat-label">Score:</span>
+                    <span class="stat-value">1250</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">Level:</span>
+                    <span class="stat-value">7</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">Time:</span>
+                    <span class="stat-value">12:45</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">Lives:</span>
+                    <span class="stat-value">3</span>
+                </div>
             </section>
             <section class="controls">
                 <h2>Controlls</h2>
+                <button class="control-btn">Start</button>
+                <button class="control-btn">Pause</button>
+                <button class="control-btn">Reset</button>
+                <button class="control-btn">Settings</button>
             </section>
         </div>
     </div>
