--- a/Lektion13/Bootstrap.html
+++ b/Lektion13/Bootstrap.html
@@ -33,8 +33,105 @@
             <div class="col">Kolumn 3</div>
         </div>
     </div>
+    <hr>
+    <!-- Kontextuella text färg -->
+    <div>
+        <p class="text-primary">.text-primary</p>
+        <p class="text-secondary">.text-secondary</p>
+        <p class="text-danger">.text-danger</p>
+        <p class="text-warning">.text-warning</p>
+        <p class="text-success">.text-success</p>
+        <p class="text-info">.text-info</p>
+        <p class="text-light">.text-light</p>
+        <p class="text-dark">.text-dark</p>
+        <p class="text-white">.text-white</p>
+    </div>
+    <hr>
+    <!-- Kontextuella backgrundsfärg -->
+    <div>
+        <p class="bg-primary text-light">.bg-primary</p>
+        <p class="bg-secondary text-light">.bg-secondary</p>
+        <p class="bg-success text-light">.bg-success</p>
+        <p class="bg-danger text-light">.bg-danger</p>
+        <p class="bg-warning text-light">.bg-warning</p>
+        <p class="bg-info text-light">.bg-info</p>
+        <p class="bg-light text-dark">.bg-light</p>
+        <p class="bg-white text-dark">.bg-white</p>
+        <p class="bg-dark text-light">.bg-dark</p>
+    </div>
+    <hr>
+    <!--Kontextuella länkar-->
+    <div>
+        <p><a href="#" class="text-primary">Primary link</a></p>
+        <p><a href="#" class="text-secondary">Secondary link</a></p>
+        <p><a href="#" class="text-success">Success link</a></p>
+        <p><a href="#" class="text-danger">Danger link</a></p>
+        <p><a href="#" class="text-warning">Warning link</a></p>
+        <p><a href="#" class="text-info">Info link</a></p>
+        <p><a href="#" class="text-light">Light link</a></p> 
+        <p><a href="#" class="text-dark">Dark link</a></p>    
+    </div>
+    <hr>
+    <!--Textjustering-->
+    <div>
+        <p class="text-left">Vänster justerad på alla viewport storlek.</p>
+        <p class="text-center">Centrerat text på alla viewport storlek.</p>
+        <p class="text-right">Höger justerad text på alla viewport storlek.</p>
+    </div>
+    <hr>
+    <!--Width-->
+    <div>
+        <p class="w-25 bg-info text-center">Width 25%</p>
+        <p class="w-50 bg-info text-center">Width 50%</p>
+        <p class="w-75 bg-info text-center">Width 75%</p>
+        <p class="w-100 bg-info text-center">Width 100%</p>
+    </div>
+    <hr>
+    <!--Automatiska marginaler-->
+    <div class="mx-auto w-25 bg-light">
+        Center this div
+    </div>
+    <hr>
+    <!--Responsiva bilder-->
+    <img src="https://placehold.co/200x200" alt="Responsive image" class="img-fluid" >
 
-    <!-- Kontextuella färg -->
+    <hr>
+    <!--Runda hörn på bilder-->
+    <img src="https://placehold.co/200x200" alt="Rounded image" class="rounded-circle" >
+
+      <hr>
+    <!--Thumbnails bilder-->
+    <img src="https://placehold.co/200x200" alt="Thumbnail image" class="img-thumbnail" >
+    <hr>
+    <!--Buttons-->
+    <div>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-dark">Dark</button>
+        <button type="button" class="btn btn-light">Light</button>
+    </div>
+    <hr>
+    <div>
+        <button type="button" class="btn btn-outline-primary">Primary</button>
+        <button type="button" class="btn btn-outline-success">Success</button>
+        <button type="button" class="btn btn-outline-danger">Danger</button>
+    </div>
+    <hr>
+    <div>
+        <button type="button" class="btn btn-outline-primary btn-lg">Large button</button>
+        <button type="button" class="btn btn-outline-success">Standard button</button>
+        <button type="button" class="btn btn-outline-danger btn-sm">Small button</button>
+    </div>
+    <hr>
+    <div>
+        <!--Breaking - kolla dokumentation-->
+        <button type="button" class="btn btn-outline-primary btn-block">Block level button</button>
+    </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
