--- a/Lektion13/Bootstrap.html
+++ b/Lektion13/Bootstrap.html
@@ -7,6 +7,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
+    <!--Navigering listor-->
+    <ul class="nav justify-content-center nav-pills">
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
+    </ul>
+    <hr>
+       <ul class="nav justify-content-center nav-tabs">
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
+    </ul>
+    <hr>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center w-50 bg-success ">Kolumn 1</div>
