Lektion 13 - Bootstrap - Website layout -footer

--- a/Lektion13/BootstrapExampleLayout.html
+++ b/Lektion13/BootstrapExampleLayout.html
@@ -33,5 +33,10 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="jumbotron text-center" style="margin-bottom: 0;">
+        <p>Footer</p>
+    </div>
 </body>
 </html>
