--- a/Lektion13/BootstrapExampleLayout.html
+++ b/Lektion13/BootstrapExampleLayout.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        .fakeimg{
+            height: 200px;
+            background: #aaa;
+        }
+    </style>
 </head>
 <body>
     <div class="jumbotron text-center" style="margin-bottom: 0;">
@@ -28,11 +34,47 @@
                 <ul class="nav navbar-nav"> 
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">About us</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Projekt</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>About Me</h2>
+                <h5>Photo of me:</h5>
+                <div class="fakeimg">Fake Image</div>
+                <p>Some text about me: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad aliquam beatae unde. Eius aliquid repudiandae doloremque commodi? Quibusdam, voluptatum ex. Unde repellat blanditiis cumque in, similique velit ullam nostrum. Sed?</p>
+                <h3>Some links</h3>
+                <p>Lorem ipsum dolor sit ame.</p>
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="active"><a href="">Link 1</a></li>
+                    <li><a href="">Link 2</a></li>
+                    <li><a href="">Link 3</a></li>
+                </ul>
+                <hr class="hidden-sm hidden-md hidden-lg" >
+            </div>
+            <div class="col-sm-8">
+                <div>
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Okt 21, 2025</h5>
+                    <div class="fakeimg">Fake Img</div>
+                    <p>Some text....</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dolorum ex repellendus illum ullam officiis rem fugit corporis temporibus voluptas omnis exercitationem facere, eius modi? Nostrum dolorem exercitationem quas voluptatum!</p>   
+                </div>
+                <div>
+                    <h2>TITLE HEADING</h2>
+                    <h5>Title description, Okt 21, 2025</h5>
+                    <div class="fakeimg">Fake Img</div>
+                    <p>Some text....</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dolorum ex repellendus illum ullam officiis rem fugit corporis temporibus voluptas omnis exercitationem facere, eius modi? Nostrum dolorem exercitationem quas voluptatum!</p>   
+                </div>
+            
+            </div>
+        </div>
+    </div>
 
 
     <div class="jumbotron text-center" style="margin-bottom: 0;">
